--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ChatGPT Integration</title>
+    <title>Ramona Chat</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0; /* Background color for better visibility */
+            background: url('gif2.gif') no-repeat center center fixed;
+            background-size: cover;
         }
         #chatContainer {
             width: 300px; /* Adjust this value to your desired width */
