--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             z-index: 2;
             position: fixed;
-            bottom: 20px; /* Position from bottom */
-            right: 20px; /* Position from right */
+            bottom: 50%; /* Position from bottom */
+            right: 50%; /* Position from right */
         }
         #minimizedChat::before {
             content: '';
